--- a/index.html
+++ b/index.html
@@ -1,11 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rinterio</title>
-</head>
-<body>
-    
-</body>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+            fontFamily: {
+              manrope: ["Manrope", "sans-serif"],
+            },
+          },
+        },
+      };
+    </script>
+    <!-- Font Awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="font-manrope">
+    <main>
+      <!-- hero section start -->
+      <header class="px-4 py-8 lg:px-28 lg:py-8">
+        <!-- nav bar   -->
+        <nav class="pb-8 flex items-center justify-between">
+          <div class="flex items-center gap-2">
+            <div
+              class="bg-[#ABEF5F] p-1 rounded-full -rotate-45 w-fit leading-none"
+            >
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+            <h3 class="font-extrabold text-2xl">Rinterio</h3>
+          </div>
+          <nav class="hidden lg:flex">
+            <ul class="flex gap-12">
+              <li>Home</li>
+              <li>Services</li>
+              <li>Portfolio</li>
+              <li>Blogs</li>
+              <li>Contacts</li>
+            </ul>
+          </nav>
+
+          <div class="lg:flex items-center gap-6 hidden">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-cart-shopping"></i>
+
+            <div
+              class="flex items-center gap-2 bg-[#ABEF5F] rounded-full py-2 px-5"
+            >
+              <h3 class="font-extrabold text-base">Book Consult</h3>
+              <div
+                class="bg-[#1C1C1C] p-1 rounded-full -rotate-45 text-white w-fit leading-none"
+              >
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+          <div class="lg:hidden flex">
+            <i class="fa-solid fa-bars"></i>
+          </div>
+        </nav>
+        <!-- hero image content -->
+        <div class="flex justify-center">
+          <img class="text-center w-2/3" src="assets/banner.png" alt="" />
+        </div>
+        <!-- hero text content -->
+        <div class="flex flex-col justify-center items-center mt-6">
+          <h3 class="text-[#212121] text-3xl lg:text-6xl  text-center px-6 font-bold">A barn house of this design has a striking appearance</h3>
+          <The class="px-6 lg:px-36 lg:py-5 text-[#494949] mt-6 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+          <div
+              class="flex items-center justify-center gap-2 bg-[#daffaf] rounded-full py-2 px-5 lg:w-fit mx-auto mt-6"
+            >
+              <h3 class="font-extrabold text-base">View Details</h3>
+              <div
+                class="bg-[#6eb61c] p-1 rounded-full -rotate-45 text-white w-fit leading-none"
+              >
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+        </div>
+      </header>
+
+      <!--  -->
+      <!--  -->
+      <!--  -->
+      <!--  -->
+    </main>
+  </body>
 </html>
