--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rinterio</title>
     <!-- Tailwind CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -35,20 +36,20 @@
   <body class="font-manrope">
     <main>
       <!-- hero section start -->
-      <header class="px-4 py-8 lg:px-28 lg:py-8">
+      <header class="px-4 py-8 lg:px-28 lg:py-8 bg-gradient-to-b from-[#f4f4f4] to-[#ffffff]">
         <!-- nav bar   -->
         <nav class="pb-8 flex items-center justify-between">
           <div class="flex items-center gap-2">
             <div
-              class="bg-[#ABEF5F] p-1 rounded-full -rotate-45 w-fit leading-none"
+              class="bg-[#ABEF5F] p-2 rounded-full -rotate-45 w-fit leading-none"
             >
               <i class="fa-solid fa-arrow-right"></i>
             </div>
-            <h3 class="font-extrabold text-2xl">Rinterio</h3>
+            <h3 class="font-extrabold text-3xl">Rinterio</h3>
           </div>
           <nav class="hidden lg:flex">
             <ul class="flex gap-12">
-              <li>Home</li>
+              <li class="font-bold">Home</li>
               <li>Services</li>
               <li>Portfolio</li>
               <li>Blogs</li>
@@ -57,15 +58,19 @@
           </nav>
 
           <div class="lg:flex items-center gap-6 hidden">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <div class="bg-[#ffffff] p-3 rounded-full leading-none border border-[#e2e2e2]">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <div class="bg-[#ffffff] p-3 rounded-full leading-none border border-[#e2e2e2]">
+              <i class="fa-solid fa-cart-shopping"></i>
+            </div>
 
             <div
-              class="flex items-center gap-2 bg-[#ABEF5F] rounded-full py-2 px-5"
+              class="flex items-center gap-2 bg-[#ABEF5F] rounded-full py-2 px-5 "
             >
-              <h3 class="font-extrabold text-base">Book Consult</h3>
+              <h3 class="font-extrabold text-lg">Book Consult</h3>
               <div
-                class="bg-[#1C1C1C] p-1 rounded-full -rotate-45 text-white w-fit leading-none"
+                class="bg-[#1C1C1C] p-2 rounded-full -rotate-45 text-white w-fit leading-none"
               >
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
@@ -84,11 +89,11 @@
           <h3 class="text-[#212121] text-3xl lg:text-6xl  text-center px-6 font-bold">A barn house of this design has a striking appearance</h3>
           <The class="px-6 lg:px-36 lg:py-5 text-[#494949] mt-6 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
           <div
-              class="flex items-center justify-center gap-2 bg-[#daffaf] rounded-full py-2 px-5 lg:w-fit mx-auto mt-6"
+              class="flex items-center justify-center gap-2 bg-[#daffaf] rounded-full py-2 px-5 lg:w-fit mx-auto mt-6 border border-[#92ec00]"
             >
-              <h3 class="font-extrabold text-base">View Details</h3>
+              <h3 class="font-extrabold text-base ">View Details</h3>
               <div
-                class="bg-[#6eb61c] p-1 rounded-full -rotate-45 text-white w-fit leading-none"
+                class="bg-[#8beb1d] p-2 rounded-full -rotate-45 text-black w-fit leading-none "
               >
                 <i class="fa-solid fa-arrow-right"></i>
               </div>
@@ -96,7 +101,51 @@
         </div>
       </header>
 
-      <!--  -->
+      <!-- Design section -->
+       <div class="lg:px-20 py-10 bg-[#f4f4f4]">
+        <!-- design icon -->
+        <div class="hidden lg:block">
+          <img src="assets/Vector.png" alt="">
+        </div>
+        <!-- design container -->
+        <div class="lg:flex justify-center items-center py-6">
+          <!-- design text -->
+           <div class="px-6 lg:px-10 flex flex-col gap-4 lg:w-1/2">
+            <button class=" rounded-full py-1 px-4 bg-white font-bold flex gap-2 items-center w-fit"><i class="fa-solid fa-arrow-right"></i> About Us
+            </button>
+<h2 class="font-extrabold text-2xl lg:text-4xl text-center lg:text-left">We design thoughtful,<br> liveable spaces</h2>
+<p class="text-center lg:text-left">The barn house captivates with its blend of rustic charm and 
+  modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+            <div class="card card-side bg-base-100  bg-white pl-6">
+              <figure>
+                <img
+                  src="assets/commercial.png"
+                  alt="Movie" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Commercial</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+            </div>
+            <div class="card card-side bg-base-100  bg-white pl-6">
+              <figure>
+                <img
+                  src="assets/residential.png"
+                  alt="Movie" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Residential</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+              </div>
+            </div>
+           </div>
+           <!-- design image -->
+            <div class="mx-6 mt-6 rounded-xl bg-cover bg-center  " style="background-image: url(assets/Rectangle.png)">
+              <img class="lg:block" src="assets/Rectangle.png" alt="">
+            </div>
+        </div>
+       </div>
       <!--  -->
       <!--  -->
       <!--  -->
