--- a/index.html
+++ b/index.html
@@ -145,8 +145,32 @@
               <img class="lg:block" src="assets/Rectangle.png" alt="">
             </div>
         </div>
+        <!-- Design card -->
+       <div class="grid lg:grid-cols-4 mx-6 gap-12 lg:px-16 py-10  bg-white rounded-xl">
+        <div class="flex flex-col justify-center items-center gap-3">
+          <div class="text-3xl"><i class="fa-regular fa-message"></i></div>
+          <h2 class="font-extrabold text-4xl text-[#494949]">235+</h2>
+          <p class="text-[#737373]">Happy Client Review</p>
+        </div>
+        <div class="flex flex-col justify-center items-center gap-3">
+          <div class="text-3xl"><i class="fa-regular fa-building"></i></i></div>
+          <h2 class="font-extrabold text-4xl text-[#494949]">50+</h2>
+          <p class="text-[#737373]">Work Departments</p>
+        </div>
+        <div class="flex flex-col justify-center items-center gap-3">
+          <div class="text-3xl"><i class="fa-solid fa-users"></i></i></div>
+          <h2 class="font-extrabold text-4xl text-[#494949]">30k+</h2>
+          <p class="text-[#737373]">Our Happy Client</p>
+        </div>
+        <div class="flex flex-col justify-center items-center gap-3">
+          <div class="text-3xl"><i class="fa-solid fa-user-group"></i></i></div>
+          <h2 class="font-extrabold text-4xl text-[#494949]">307+</h2>
+          <p class="text-[#737373]">Staff Members</p>
+        </div>
+        
        </div>
-      <!--  -->
+       </div>
+      
       <!--  -->
       <!--  -->
     </main>
