--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
           <img src="assets/Vector.png" alt="">
         </div>
         <!-- design container -->
-        <div class="lg:flex justify-center items-center py-6">
+        <div class="lg:flex justify-center items-center ">
           <!-- design text -->
-           <div class="px-6 lg:px-10 flex flex-col gap-4 lg:w-1/2">
+           <div class="px-6 lg:px-10 flex flex-col items-center lg:items-start gap-4 lg:w-1/2 ">
             <button class=" rounded-full py-1 px-4 bg-white font-bold flex gap-2 items-center w-fit"><i class="fa-solid fa-arrow-right"></i> About Us
             </button>
 <h2 class="font-extrabold text-2xl lg:text-4xl text-center lg:text-left">We design thoughtful,<br> liveable spaces</h2>
@@ -146,7 +146,7 @@
             </div>
         </div>
         <!-- Design card -->
-       <div class="grid lg:grid-cols-4 mx-6 gap-12 lg:px-16 py-10  bg-white rounded-xl">
+       <div class="grid lg:grid-cols-4 mx-6 gap-12 lg:px-16 py-10  bg-white rounded-xl mt-6 lg:mt-24">
         <div class="flex flex-col justify-center items-center gap-3">
           <div class="text-3xl"><i class="fa-regular fa-message"></i></div>
           <h2 class="font-extrabold text-4xl text-[#494949]">235+</h2>
@@ -171,7 +171,45 @@
        </div>
        </div>
       
-      <!--  -->
+        <!-- Work Process -->
+        <div class="px-6 lg:px-10 flex flex-col items-center  gap-4 lg:pt-12 bg-[#f4f4f4]">
+          <button class=" rounded-full py-1 px-4 bg-white font-bold flex gap-2 items-center w-fit"><i class="fa-solid fa-arrow-right"></i> How we works
+          </button>
+          <h2 class="font-extrabold text-2xl lg:text-4xl text-center ">Our Works Process</h2>
+          <p class="text-center  lg:w-1/2">The barn house captivates with its blend of rustic charm and 
+          modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+          <div class="grid lg:grid-cols-4 lg:mx-6 gap-6 lg:px-16 py-10 mt-6">
+            <div class="bg-[#E7C1D3] rounded-2xl p-6">
+              <img src="assets/concept.png" alt="">
+              <h3 class="py-2 font-extrabold text-xl">Concept</h3>
+              <p>The barn house captivates
+                with its blend of rustic charm
+                and modern.</p>
+            </div>
+            <div class="bg-[#EFDA6E] rounded-2xl p-6">
+              <img src="assets/concept.png" alt="">
+              <h3 class="py-2 font-extrabold text-xl">Concept</h3>
+              <p>The barn house captivates
+                with its blend of rustic charm
+                and modern.</p>
+            </div>
+            <div class="bg-[#A4DAC3] rounded-2xl p-6">
+              <img src="assets/concept.png" alt="">
+              <h3 class="py-2 font-extrabold text-xl">Concept</h3>
+              <p>The barn house captivates
+                with its blend of rustic charm
+                and modern.</p>
+            </div>
+            <div class="bg-[#77AAEA] rounded-2xl p-6">
+              <img src="assets/concept.png" alt="">
+              <h3 class="py-2 font-extrabold text-xl">Concept</h3>
+              <p>The barn house captivates
+                with its blend of rustic charm
+                and modern.</p>
+            </div>
+          </div>
+        </div>
       <!--  -->
     </main>
   </body>
