--- a/index.html
+++ b/index.html
@@ -297,7 +297,137 @@
           </div>
           
         </div>
-      <!--  -->
+      <!-- Article section start -->
+      <div class="px-6 lg:px-10 pt-8 lg:py-20 bg-[#f4f4f4]">
+        
+        <!-- text content -->
+         <div class="flex flex-col items-center  gap-4">
+          <button class=" rounded-full py-1 px-4 bg-white font-bold flex gap-2 items-center w-fit">
+          <i class="fa-solid fa-arrow-right"></i> Rinterio News
+          </button>
+          <h2 class="font-extrabold text-2xl lg:text-4xl text-center ">Read Our Articles and News</h2>
+          <p class="text-center  lg:w-1/2">The barn house captivates with its blend of rustic charm and 
+          modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+         <!-- card content -->
+          <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:px-20">
+            <!-- card -->
+            <div class="card bg-white mt-6">
+              <!-- image part -->
+              <div>
+                <div class="p-5">
+                  <img src="assets/article1.png" alt="">
+                </div>
+                <div class="flex gap-4">
+                  <span class="text-[#737373] pl-6">
+                    <i class="fa-regular fa-calendar-days"></i>
+                    <span class="">July14, 2024</span>                
+                  </span>
+                  <span class="text-[#737373]">
+                    <i class="fa-solid fa-user-tie"></i>
+                    <span class="">July14, 2024</span>                
+                  </span>
+                </div>
+              </div>
+              <!-- text part -->
+
+              <div class="">
+                <div class="px-6">
+                  <h3 class="py-2 font-extrabold text-xl ">How to choose the furniture
+                    right of your home.</h3>
+                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  <div
+                class="flex items-center lg:justify-center gap-2  py-2  lg:w-fit  ">
+                <h3 class="font-extrabold text-base ">Read More</h3>
+                <div
+                  class="bg-[#8beb1d] p-2 rounded-full -rotate-45 text-black w-fit leading-none ">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </div>
+              </div>
+                </div>
+              </div>
+            </div>
+            <!-- card content -->
+          <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:px-20">
+            <!-- card -->
+            <div class="card bg-white mt-6">
+              <!-- image part -->
+              <div>
+                <div class="p-5">
+                  <img src="assets/article1.png" alt="">
+                </div>
+                <div class="flex gap-4">
+                  <span class="text-[#737373] pl-6">
+                    <i class="fa-regular fa-calendar-days"></i>
+                    <span class="">July14, 2024</span>                
+                  </span>
+                  <span class="text-[#737373]">
+                    <i class="fa-solid fa-user-tie"></i>
+                    <span class="">July14, 2024</span>                
+                  </span>
+                </div>
+              </div>
+              <!-- text part -->
+
+              <div class="">
+                <div class="px-6">
+                  <h3 class="py-2 font-extrabold text-xl ">How to choose the furniture
+                    right of your home.</h3>
+                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  <div
+                class="flex items-center lg:justify-center gap-2  py-2  lg:w-fit  ">
+                <h3 class="font-extrabold text-base ">Read More</h3>
+                <div
+                  class="bg-[#8beb1d] p-2 rounded-full -rotate-45 text-black w-fit leading-none ">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </div>
+              </div>
+                </div>
+              </div>
+            </div>
+            <!-- card content -->
+          <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:px-20">
+            <!-- card -->
+            <div class="card bg-white mt-6">
+              <!-- image part -->
+              <div>
+                <div class="p-5">
+                  <img src="assets/article1.png" alt="">
+                </div>
+                <div class="flex gap-4">
+                  <span class="text-[#737373] pl-6">
+                    <i class="fa-regular fa-calendar-days"></i>
+                    <span class="">July14, 2024</span>                
+                  </span>
+                  <span class="text-[#737373]">
+                    <i class="fa-solid fa-user-tie"></i>
+                    <span class="">July14, 2024</span>                
+                  </span>
+                </div>
+              </div>
+              <!-- text part -->
+
+              <div class="">
+                <div class="px-6">
+                  <h3 class="py-2 font-extrabold text-xl ">How to choose the furniture
+                    right of your home.</h3>
+                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                  <div
+                class="flex items-center lg:justify-center gap-2  py-2  lg:w-fit  ">
+                <h3 class="font-extrabold text-base ">Read More</h3>
+                <div
+                  class="bg-[#8beb1d] p-2 rounded-full -rotate-45 text-black w-fit leading-none ">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </div>
+              </div>
+                </div>
+              </div>
+            </div>
+
+
+            </div>
+          </div>
+       </div>
     </main>
   </body>
 </html>
