--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           
         </div>
       <!-- Article section start -->
-      <div class="px-6 lg:px-10 pt-8 lg:py-20 bg-[#f4f4f4]">
+      <div class="px-6 lg:px-12 pt-8 lg:py-20 bg-[#f4f4f4]">
         
         <!-- text content -->
          <div class="flex flex-col items-center  gap-4">
@@ -309,8 +309,9 @@
           <p class="text-center  lg:w-1/2">The barn house captivates with its blend of rustic charm and 
           modern sophistication, featuring weathered wood, sleek metal accents.</p>
         </div>
+
          <!-- card content -->
-          <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:px-20">
+          <div class="grid grid-cols-1 lg:grid-cols-3 lg:gap-6 lg:px-20">
             <!-- card -->
             <div class="card bg-white mt-6">
               <!-- image part -->
@@ -329,16 +330,16 @@
                   </span>
                 </div>
               </div>
-              <!-- text part -->
 
+              <!-- text part -->
               <div class="">
                 <div class="px-6">
-                  <h3 class="py-2 font-extrabold text-xl ">How to choose the furniture
+                  <h3 class="py-2 font-extrabold text-xl text-[#494949]">How to choose the furniture
                     right of your home.</h3>
-                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-[#737373] font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
                   <div
                 class="flex items-center lg:justify-center gap-2  py-2  lg:w-fit  ">
-                <h3 class="font-extrabold text-base ">Read More</h3>
+                <h3 class="font-extrabold text-base text-[#212121]">Read More</h3>
                 <div
                   class="bg-[#8beb1d] p-2 rounded-full -rotate-45 text-black w-fit leading-none ">
                   <i class="fa-solid fa-arrow-right"></i>
@@ -346,15 +347,13 @@
               </div>
                 </div>
               </div>
-            </div>
-            <!-- card content -->
-          <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:px-20">
+            </div> 
             <!-- card -->
             <div class="card bg-white mt-6">
               <!-- image part -->
               <div>
                 <div class="p-5">
-                  <img src="assets/article1.png" alt="">
+                  <img src="assets/article2.png" alt="">
                 </div>
                 <div class="flex gap-4">
                   <span class="text-[#737373] pl-6">
@@ -367,16 +366,16 @@
                   </span>
                 </div>
               </div>
-              <!-- text part -->
 
+              <!-- text part -->
               <div class="">
                 <div class="px-6">
-                  <h3 class="py-2 font-extrabold text-xl ">How to choose the furniture
+                  <h3 class="py-2 font-extrabold text-xl text-[#494949]">How to choose the furniture
                     right of your home.</h3>
-                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-[#737373] font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
                   <div
                 class="flex items-center lg:justify-center gap-2  py-2  lg:w-fit  ">
-                <h3 class="font-extrabold text-base ">Read More</h3>
+                <h3 class="font-extrabold text-base text-[#212121]">Read More</h3>
                 <div
                   class="bg-[#8beb1d] p-2 rounded-full -rotate-45 text-black w-fit leading-none ">
                   <i class="fa-solid fa-arrow-right"></i>
@@ -385,14 +384,12 @@
                 </div>
               </div>
             </div>
-            <!-- card content -->
-          <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 lg:px-20">
             <!-- card -->
             <div class="card bg-white mt-6">
               <!-- image part -->
               <div>
                 <div class="p-5">
-                  <img src="assets/article1.png" alt="">
+                  <img src="assets/article3.png" alt="">
                 </div>
                 <div class="flex gap-4">
                   <span class="text-[#737373] pl-6">
@@ -405,16 +402,16 @@
                   </span>
                 </div>
               </div>
-              <!-- text part -->
 
+              <!-- text part -->
               <div class="">
                 <div class="px-6">
-                  <h3 class="py-2 font-extrabold text-xl ">How to choose the furniture
+                  <h3 class="py-2 font-extrabold text-xl text-[#494949]">How to choose the furniture
                     right of your home.</h3>
-                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-[#737373] font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
                   <div
                 class="flex items-center lg:justify-center gap-2  py-2  lg:w-fit  ">
-                <h3 class="font-extrabold text-base ">Read More</h3>
+                <h3 class="font-extrabold text-base text-[#212121]">Read More</h3>
                 <div
                   class="bg-[#8beb1d] p-2 rounded-full -rotate-45 text-black w-fit leading-none ">
                   <i class="fa-solid fa-arrow-right"></i>
@@ -423,8 +420,6 @@
                 </div>
               </div>
             </div>
-
-
             </div>
           </div>
        </div>
