Project section done

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </div>
         <!-- Explore our Latest works -->
         <div class="px-6 lg:px-10 lg:py-10 flex flex-col items-center  gap-4 lg:pt-12 bg-[#ffffff]">
-          <button class=" rounded-full py-1 px-4 bg-white font-bold flex gap-2 items-center w-fit"><i class="fa-solid fa-arrow-right"></i> Explore our Latest works
+          <button class=" rounded-full py-1 px-4 bg-[#bafd6d83] font-bold flex gap-2 items-center w-fit"><i class="fa-solid fa-arrow-right"></i> Explore our Latest works
           </button>
           <h2 class="font-extrabold text-2xl lg:text-4xl text-center ">Our Latest Portfolio
           </h2>
@@ -302,7 +302,7 @@
         
         <!-- text content -->
          <div class="flex flex-col items-center  gap-4">
-          <button class=" rounded-full py-1 px-4 bg-white font-bold flex gap-2 items-center w-fit">
+          <button class=" rounded-full py-1 px-4 bg-[#bafd6d83] font-bold flex gap-2 items-center w-fit">
           <i class="fa-solid fa-arrow-right"></i> Rinterio News
           </button>
           <h2 class="font-extrabold text-2xl lg:text-4xl text-center ">Read Our Articles and News</h2>
@@ -422,7 +422,37 @@
             </div>
             </div>
           </div>
-       </div>
+      <!-- Next Project section start -->
+      <div class="px-6 lg:px-20 pt-8 lg:py-20 bg-[url('assets/bg.jpg')] bg-cover m-1">
+        
+        <!-- text content -->
+        <div class="flex flex-col items-center  gap-4">
+          <button class=" rounded-full py-1 px-4 font-bold flex gap-2 items-center w-fit bg-[#bafd6d83]">
+          <i class="fa-solid fa-arrow-right"></i> Let s Connect
+          </button>
+          <h2 class="font-extrabold text-2xl lg:text-4xl text-center ">Let s Discuss Next Project</h2>
+          <p class="text-center  lg:w-3/5">The barn house captivates with its blend of rustic charm and 
+          modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <!-- Form content -->
+        <form class="grid lg:grid-cols-2 grid-cols-1 gap-5 lg:px-40 pt-6 lg:pt-10">
+          <input type="text" placeholder="First Name*" class="input rounded-full lg:h-16" required/>
+          <input type="text" placeholder="Last Name*" class="input rounded-full lg:h-16" required/>
+          <input type="text" placeholder="Phone Number*" class="input rounded-full lg:h-16" required/>
+          <input type="text" placeholder="Email Number*" class="input rounded-full lg:h-16" required/>
+          <textarea name="" id="" placeholder="Write your message here" class="rounded-3xl h-52 lg:col-span-2 p-4 "></textarea>
+          <div
+              class="flex items-center gap-2 bg-[#ABEF5F] rounded-full py-2 px-5 lg:col-span-2 justify-center lg:h-16"
+            >
+              <h3 class="font-extrabold text-lg">Book Consult</h3>
+              <div
+                class="bg-[#1C1C1C] p-2 rounded-full -rotate-45 text-white w-fit leading-none "
+              >
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+        </form>
+      </div>
     </main>
   </body>
 </html>
