--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
           modern sophistication, featuring weathered wood, sleek metal accents.</p>
         </div>
         <!-- Form content -->
-        <form class="grid lg:grid-cols-2 grid-cols-1 gap-5 lg:px-40 pt-6 lg:pt-10">
+        <form class="grid lg:grid-cols-2 grid-cols-1 gap-5 lg:px-40 py-6 lg:pt-10">
           <input type="text" placeholder="First Name*" class="input rounded-full lg:h-16" required/>
           <input type="text" placeholder="Last Name*" class="input rounded-full lg:h-16" required/>
           <input type="text" placeholder="Phone Number*" class="input rounded-full lg:h-16" required/>
@@ -453,6 +453,36 @@
             </div>
         </form>
       </div>
+      <footer class="bg-[#1C1C1C] py-24">
+        <!-- text content -->
+        <div class="flex flex-col items-center  gap-4">
+          <div class="flex items-center gap-2">
+            <div
+              class="bg-[#ABEF5F] p-2 rounded-full -rotate-45 w-fit leading-none"
+            >
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+            <h3 class="font-extrabold text-3xl text-white">Rinterio</h3>
+          </div>
+          <p class="text-center  lg:w-1/2 w-4/5 text-[#737373]">The barn house captivates with its blend of rustic charm and 
+          modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <nav class="flex py-12">
+          <ul class="flex lg:gap-28 gap-8 flex-col lg:flex-row text-[#E9E9E9] lg:justify-center lg:items-center mx-auto text-sm">
+            <li class="font-bold">Home</li>
+            <li>Services</li>
+            <li>Portfolio</li>
+            <li>Blogs</li>
+            <li>Contacts</li>
+          </ul>
+        </nav>
+        <div class="flex items-center gap-2 bg-[#ABEF5F] rounded-full py-2 px-5 lg:w-1/6 w-4/5 justify-center mx-auto">
+          <h3 class="font-extrabold text-xl">Book Consult</h3>
+          <div class="bg-[#1C1C1C] p-2 rounded-full -rotate-45 text-white w-fit leading-none">
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
