Initial recheck done

--- a/index.html
+++ b/index.html
@@ -190,22 +190,22 @@
                 and modern.</p>
             </div>
             <div class="bg-[#EFDA6E] rounded-2xl p-6">
-              <img src="assets/concept.png" alt="">
-              <h3 class="py-2 font-extrabold text-xl">Concept</h3>
+              <img src="assets/flow-chart.png" alt="">
+              <h3 class="py-2 font-extrabold text-xl">Design Process</h3>
               <p>The barn house captivates
                 with its blend of rustic charm
                 and modern.</p>
             </div>
             <div class="bg-[#A4DAC3] rounded-2xl p-6">
-              <img src="assets/concept.png" alt="">
-              <h3 class="py-2 font-extrabold text-xl">Concept</h3>
+              <img src="assets/vision.png" alt="">
+              <h3 class="py-2 font-extrabold text-xl">Supervision</h3>
               <p>The barn house captivates
                 with its blend of rustic charm
                 and modern.</p>
             </div>
             <div class="bg-[#77AAEA] rounded-2xl p-6">
-              <img src="assets/concept.png" alt="">
-              <h3 class="py-2 font-extrabold text-xl">Concept</h3>
+              <img src="assets/budget-planning.png" alt="">
+              <h3 class="py-2 font-extrabold text-xl">Budget Planning</h3>
               <p>The barn house captivates
                 with its blend of rustic charm
                 and modern.</p>
