--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <img class="w-full h-full object-cover" src="assets/img1.png" alt="">
               </div>
               <div class="lg:pl-6 lg:w-2/3">
-                <h3 class="py-2 font-extrabold text-xl ">Concept</h3>
+                <h3 class="py-2 font-extrabold text-xl ">Commercial</h3>
               <p>The barn house captivates with its blend of rustic charm
                 and modern. The barn house captivates with its blend of
                 rustic charm and modern .</p>
@@ -272,7 +272,7 @@
                 <img class="w-full h-full object-cover" src="assets/img4.png" alt="">
               </div>
               <div class="lg:pl-6 lg:w-2/3">
-                <h3 class="py-2 font-extrabold text-xl ">Concept</h3>
+                <h3 class="py-2 font-extrabold text-xl ">Commercial</h3>
               <p>The barn house captivates with its blend of rustic charm
                 and modern.</p>
                 <div
@@ -453,6 +453,67 @@
             </div>
         </form>
       </div>
+
+      <!-- Meet our teams -->
+      <div class="p-6 lg:p-10 flex flex-col items-center  gap-4 lg:pt-12 bg-[#ffffff]">
+        <button class=" rounded-full py-1 px-4 bg-[#bafd6d83] font-bold flex gap-2 items-center w-fit">
+          <i class="fa-solid fa-arrow-right"></i> Explore our Teams
+        </button>
+        <h2 class="font-extrabold text-2xl lg:text-4xl text-center ">Meet Our Team
+        </h2>
+        <p class="text-center  lg:w-1/2">Get to know the creative minds behind our exceptional designs. Our team of experienced professionals brings passion, innovation, and expertise to every project, ensuring your vision becomes a reality. From concept to completion, we work collaboratively to craft spaces that inspire and delight.</p>
+
+        <!-- developer card start here -->
+        <div class="grid lg:grid-cols-3 grid-cols-1 lg:mx-6 gap-6 lg:px-24  mt-6">      
+          <!-- card -->
+          <div class="rounded-t-[50px] border-4 border-[#ebebeb] ">
+            <!-- image -->
+            <div class="flex w-full p-6 ">
+              <img class="w-2/3 mx-auto object-cover rounded-full border-4 border-[#ebebeb] p-1" src="assets/team-2-1.jpg" alt="">
+            </div>
+            <!-- description -->
+            <div>
+              <!-- name -->
+              <h3 class="font-bold text-2xl text-center text-orange-600">Jessica Ethan</h3>
+              <h2 class="text-center">Junior web developer</h2>
+              <p class="text-center px-5 py-3 ">Jessica is a full-stack developer skilled in React and Node.js, building scalable, user-friendly applications with clean, maintainable code.</p>
+              <div class="bg-gradient-to-r from-orange-500 to-red-600 text-center w-full mb-6 p-1 text-white">Your mail goes here</div>
+            </div>       
+          </div>     
+          <!-- card -->
+          <div class="rounded-t-[50px] border-4 border-[#ebebeb] ">
+            <!-- image -->
+            <div class="flex w-full p-6 ">
+              <img class="w-2/3 mx-auto object-cover rounded-full border-4 border-[#ebebeb] p-1" src="assets/team-3-1.jpg" alt="">
+            </div>
+            <!-- description -->
+            <div>
+              <!-- name -->
+              <h3 class="font-bold text-2xl text-center text-[#9831d4]">Julia Martin</h3>
+              <h2 class="text-center">Senior web developer</h2>
+              <p class="text-center px-5 py-3 ">Julia is a front-end developer focused on creating responsive, visually stunning websites with a strong emphasis on user experience.</p>
+              <div class="bg-gradient-to-r from-[#be76e7] to-[#8d18d1] text-center w-full mb-6 p-1 text-white">Your mail goes here</div>
+            </div>       
+          </div> 
+          <!-- card -->
+          <div class="rounded-t-[50px] border-4 border-[#ebebeb] ">
+            <!-- image -->
+            <div class="flex w-full p-6 ">
+              <img class="w-2/3 mx-auto object-cover rounded-full border-4 border-[#ebebeb] p-1" src="assets/team-4.jpg" alt="">
+            </div>
+            <!-- description -->
+            <div>
+              <!-- name -->
+              <h3 class="font-bold text-2xl text-center text-[#208188]">Mary Vels</h3>
+              <h2 class="text-center">Senior web developer</h2>
+              <p class="text-center px-5 py-3 ">Mary is a back-end developer specializing in scalable systems using Python and Django, with a passion for problem-solving and optimization.</p>
+              <div class="bg-gradient-to-r from-[#69dce4] to-[#059faa] text-center w-full mb-6 p-1 text-white">Your mail goes here</div>
+            </div>       
+          </div>      
+        </div>
+      </div>  
+
+      <!-- Footer section -->
       <footer class="bg-[#1C1C1C] py-24">
         <!-- text content -->
         <div class="flex flex-col items-center  gap-4">
@@ -486,3 +547,5 @@
     </main>
   </body>
 </html>
+
+
